@@ -1,4 +1,10 @@
 
+2017-03-19  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y (setup_program_start): moved call to (cb_build_program) to
+	  (setup_program), after the PROGRAM-ID has been checked for
+	  redefinition (see bug #271).
+
 2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_check_overlapping): return a possible overlap if at least
@@ -30,7 +36,7 @@
 	* codegen.c:
 	  Emit routines cob_file_external_addr,cob_file_malloc,cob_file_free
 	  so that 'cob_file' is allocated within libcob
-	  This will allow the stucture have fields added to the end
+	  This will allow the structure have fields added to the end
 	  without forcing a recompile. COB_FILE_VERSION is unchanged
 	  Emit cob_module_free so that structure gets freed within libcob
 
@@ -40,7 +46,7 @@
 
 2017-02-02 Brian Tiffin <btiffin@gnu.org>
 
-	* cobc.h: Updated CB_PENDING CB_UNIFINISHED macros with quieter ONCE_COB
+	* cobc.h: Updated CB_PENDING CB_UNFINISHED macros with quieter ONCE_COB
 
 2017-02-02 Brian Tiffin <btiffin@gnu.org>
 
